fix spacing and image fit (#10)

--- a/components/PostPreview.module.css
+++ b/components/PostPreview.module.css
@@ -3,7 +3,7 @@
   margin-bottom: 1.25rem;
    height: 0;
   position: relative;
-  padding-bottom: 60%;
+  padding-bottom: 50%;
   overflow: hidden;
 }
 
